Changelog for modCKEditor

1.0.2-beta (23.10.2016)
==============
- Remove "justify" from "removePlugins"

1.0.1-beta (23.10.2016)
==============
- Fix "file upload.class.php"

1.0.0-beta
==============
- Initial