@@ -31,11 +31,12 @@ define('MODX_ASSETS_URL', MODX_BASE_URL . 'assets/');
 
 /* define build options */
 
-define('BUILD_SETTING_UPDATE', true);
+define('BUILD_SETTING_UPDATE', false);
 define('BUILD_PLUGIN_UPDATE', true);
 define('BUILD_PLUGIN_STATIC', false);
 
 $BUILD_RESOLVERS = array(
+    'extension',
     'vendors',
     'sources',
     'settings',
