@@ -1,4 +1,4 @@
 <?php
 
-$xpdo_meta_map = array (
-);
+$xpdo_meta_map = array();
+
