@@ -3,6 +3,7 @@ Changelog for modCKEditor
 1.0.2-beta (23.10.2016)
 ==============
 - Remove "justify" from "removePlugins"
+- Change "types variables"
 
 1.0.1-beta (23.10.2016)
 ==============
